--- a/DMT_Style.css
+++ b/DMT_Style.css
@@ -4,7 +4,9 @@
   --short: 22%;
   --box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px,
     rgba(0, 0, 0, 0.23) 0px 6px 6px;
-  /* --nav-height: 3rem; */
+  --box-shadow-button: rgba(0, 0, 0, 0.12) 0px 1px 3px,
+  rgba(0, 0, 0, 0.24) 0px 1px 2px
+    /* --nav-height: 3rem; */
   --transtion_fast: 0.25s ease-in;
 }
 
@@ -73,8 +75,9 @@ nav {
 
 #btnDock {
   position: absolute;
-  right: 5%;
-  top: 5%;
+  right: 0%;
+  top: 2%;
+  cursor: pointer;
 }
 
 /* --------------------------------------------------------- */
@@ -82,13 +85,13 @@ nav {
 
 .button {
   --padding: 0.1rem;
-  --box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px,
-    rgba(0, 0, 0, 0.24) 0px 1px 2px;
 
+  border: none;
   margin: 0 8px;
   width: 96px;
   background-color: azure;
-  box-shadow: var(--box-shadow);
+  box-shadow: var(--box-shadow-button);
+  
 }
 .button:hover {
   background-color: lightgray;
